--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="card-white"> 
             <h1> Hello, I'm Marie </h1>
-                <img src="images/profil-picture.jpg" class="img-circle" width="100px" alt="Marie Duret">
+                <img src="images/profile-picture.jpg" class="img-circle" width="100px" alt="Marie Duret">
                 <p> I am currently in a french business school called Iéseg. </p>
                 <a href=""></a> 
         </div>
